--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-router": "^7.7.0",
     "shadcn": "^2.9.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
