--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "https://placehold.co/512x512",
-      "sizes": "512x512"
+      "src": "/public/chaveiro.png",
+      "sizes": "100x100"
     }
   ],
   "display": "standalone"
